# unsloth-demo

./: .env  .gitignore  README.md  pyproject.toml
docs/: 数据处理.md  模型架构.md  环境配置.md  课程前言.md
src/: __init__.py  args.py  utils.py
src/datasets/: hfds_ext.py
src/datasets/common/: catgirl.py  chumor.py  lccc.py  ruozhiba.py
src/trainer/: run_sft.py
tests/: cfunset_chat.jsonl  qwen3.jinja  test_vllm.sh
