[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undemo"
version = "0.1.0"
description = "Model-Integrated Routing & Adaptation - A flexible LLM inference and routing framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "luyukun", email = "lcyqky@icloud.com"},
]
keywords = ["llm", "vllm", "inference", "routing", "openai", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "unsloth==2025.12.9",
    "diskcache>=5.6.3",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
serving = [
    "nvitop>=1.0.0",
    "vllm==0.11.2"
]

all = [
    "mira[serving]",
]

[project.scripts]
mira-server = "mira.oai_protocol:main"

[tool.setuptools]
packages = ["mira"]

[tool.setuptools.package-data]
mira = ["py.typed"]

[tool.ruff]
line-length = 120
select = ["E", "W", "I", "F401"]
unfixable = ["F401"]

[tool.ruff.lint]
select = ["E", "W", "I", "F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]
